Bug 317443 - KMail crashed by clicking Sieve scripts
Summary: KMail crashed by clicking Sieve scripts
Status: RESOLVED FIXED
Alias: None
Product: kontact
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.10.1
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-27 13:33 UTC by Martin Fischer
Modified: 2013-03-28 08:08 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Fischer 2013-03-27 13:33:30 UTC
Application: kontact (4.10.1)
KDE Platform Version: 4.10.1
Qt Version: 4.8.2
Operating System: Linux 3.2.0-39-generic-pae i686
Distribution: Ubuntu 12.04.2 LTS

-- Information about the crash:
- What I was doing when the application crashed:
Setting up a googlemail account and enable sieve filter in settings.

The crash can be reproduced every time.

-- Backtrace:
Application: Kontact (kontact), signal: Segmentation fault
Using host libthread_db library "/lib/i386-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0xb20b1740 (LWP 25142))]

Thread 4 (Thread 0xaf80bb40 (LWP 25143)):
#0  0xb77c61b2 in ?? () from /lib/ld-linux.so.2
#1  0xb39b196b in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/i386-linux-gnu/libpthread.so.0
#2  0xb60f464c in pthread_cond_wait () from /lib/i386-linux-gnu/libc.so.6
#3  0xb586d263 in ?? () from /usr/lib/i386-linux-gnu/libQtWebKit.so.4
#4  0xb586d37f in ?? () from /usr/lib/i386-linux-gnu/libQtWebKit.so.4
#5  0xb39add4c in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#6  0xb60e6d3e in clone () from /lib/i386-linux-gnu/libc.so.6

Thread 3 (Thread 0xaeee2b40 (LWP 25144)):
#0  0xb77c61b2 in ?? () from /lib/ld-linux.so.2
#1  0xb60d85f0 in poll () from /lib/i386-linux-gnu/libc.so.6
#2  0xb38eea7b in g_poll () from /lib/i386-linux-gnu/libglib-2.0.so.0
#3  0xb38e10ae in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#4  0xb38e1201 in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#5  0xb6f0ade7 in QEventDispatcherGlib::processEvents (this=0xae500468, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#6  0xb6ed66ad in QEventLoop::processEvents (this=0xaeee2270, flags=...) at kernel/qeventloop.cpp:149
#7  0xb6ed6949 in QEventLoop::exec (this=0xaeee2270, flags=...) at kernel/qeventloop.cpp:204
#8  0xb6dbfa1c in QThread::exec (this=0x9bd2088) at thread/qthread.cpp:501
#9  0xb6dbfb0b in QThread::run (this=0x9bd2088) at thread/qthread.cpp:568
#10 0xb6dc2eb0 in QThreadPrivate::start (arg=0x9bd2088) at thread/qthread_unix.cpp:307
#11 0xb39add4c in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#12 0xb60e6d3e in clone () from /lib/i386-linux-gnu/libc.so.6

Thread 2 (Thread 0xac86fb40 (LWP 25148)):
#0  0xb38e0790 in g_main_context_prepare () from /lib/i386-linux-gnu/libglib-2.0.so.0
#1  0xb38e0faf in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#2  0xb38e1201 in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#3  0xb6f0ade7 in QEventDispatcherGlib::processEvents (this=0xabf00468, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#4  0xb6ed66ad in QEventLoop::processEvents (this=0xac86f240, flags=...) at kernel/qeventloop.cpp:149
#5  0xb6ed6949 in QEventLoop::exec (this=0xac86f240, flags=...) at kernel/qeventloop.cpp:204
#6  0xb6dbfa1c in QThread::exec (this=0x9e121c8) at thread/qthread.cpp:501
#7  0xb6eb3cfd in QInotifyFileSystemWatcherEngine::run (this=0x9e121c8) at io/qfilesystemwatcher_inotify.cpp:248
#8  0xb6dc2eb0 in QThreadPrivate::start (arg=0x9e121c8) at thread/qthread_unix.cpp:307
#9  0xb39add4c in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#10 0xb60e6d3e in clone () from /lib/i386-linux-gnu/libc.so.6

Thread 1 (Thread 0xb20b1740 (LWP 25142)):
[KCrash Handler]
#7  KManageSieve::SieveJob::kill (this=0x3, verbosity=KJob::Quietly) at ../../../libksieve/kmanagesieve/sievejob.cpp:242
#8  0xacf3ef2b in KSieveUi::ManageSieveScriptsDialog::killAllJobs (this=0xa250b28, disconnectSignal=false) at ../../../libksieve/ksieveui/managesievescriptsdialog.cpp:115
#9  0xacf3f76f in KSieveUi::ManageSieveScriptsDialog::clear (this=0xa250b28, disconnect=false) at ../../../libksieve/ksieveui/managesievescriptsdialog.cpp:321
#10 0xacf3faa4 in KSieveUi::ManageSieveScriptsDialog::slotRefresh (this=0xa250b28, disconnectSignal=false) at ../../../libksieve/ksieveui/managesievescriptsdialog.cpp:177
#11 0xacf42218 in qt_static_metacall (_a=0xbfe5260c, _id=1, _o=0xa250b28, _c=<optimized out>) at ./managesievescriptsdialog.moc:84
#12 KSieveUi::ManageSieveScriptsDialog::qt_static_metacall (_o=0xa250b28, _c=QMetaObject::InvokeMetaMethod, _id=1, _a=0xbfe5260c) at ./managesievescriptsdialog.moc:77
#13 0xb6eeebb1 in QMetaObject::activate (sender=0xaa86e00, m=0xacbe0e78, local_signal_index=2, argv=0xbfe5260c) at kernel/qobject.cpp:3547
#14 0xacbda22d in KManageSieve::SieveJob::result (this=0xaa86e00, _t1=0xaa86e00, _t2=true, _t3=..., _t4=false) at ./sievejob.moc:129
#15 0xacbdc03b in KManageSieve::SieveJob::Private::handleResponse (this=0xa023060, response=..., data=...) at ../../../libksieve/kmanagesieve/sievejob.cpp:201
#16 0xacbd7029 in KManageSieve::Session::processResponse (this=0xae5d0f0, response=..., data=...) at ../../../libksieve/kmanagesieve/session.cpp:251
#17 0xacbd865d in KManageSieve::Session::dataReceived (this=0xae5d0f0) at ../../../libksieve/kmanagesieve/session.cpp:138
#18 0xacbd942c in KManageSieve::Session::qt_static_metacall (_o=<optimized out>, _id=<optimized out>, _a=<optimized out>, _c=<optimized out>) at ./session.moc:53
#19 0xb6eeebb1 in QMetaObject::activate (sender=0xae5d2c8, m=0xb7035a58, local_signal_index=0, argv=0x0) at kernel/qobject.cpp:3547
#20 0xb6f3f025 in QIODevice::readyRead (this=0xae5d2c8) at .moc/release-shared/moc_qiodevice.cpp:105
#21 0xb71eb253 in reemitReadyRead (this=<optimized out>) at ../../kdecore/network/ktcpsocket.cpp:370
#22 qt_static_metacall (_a=0xbfe52c10, _id=12, _o=0xae5d2c8, _c=<optimized out>) at ./ktcpsocket.moc:92
#23 KTcpSocket::qt_static_metacall (_o=0xae5d2c8, _c=QMetaObject::InvokeMetaMethod, _id=12, _a=0xbfe52c10) at ./ktcpsocket.moc:74
#24 0xb6eeebb1 in QMetaObject::activate (sender=0xae5c218, m=0xb7035a58, local_signal_index=0, argv=0x0) at kernel/qobject.cpp:3547
#25 0xb6f3f025 in QIODevice::readyRead (this=0xae5c218) at .moc/release-shared/moc_qiodevice.cpp:105
#26 0xb3bc334b in QSslSocketBackendPrivate::transmit (this=0xae5d898) at ssl/qsslsocket_openssl.cpp:1149
#27 0xb3bb71d8 in QSslSocketPrivate::_q_readyReadSlot (this=0xae5d898) at ssl/qsslsocket.cpp:2205
#28 0xb3bbd0d3 in qt_static_metacall (_a=0xbfe53e00, _id=15, _o=0xae5c218, _c=<optimized out>) at .moc/release-shared/moc_qsslsocket.cpp:98
#29 QSslSocket::qt_static_metacall (_o=0xae5c218, _c=QMetaObject::InvokeMetaMethod, _id=15, _a=0xbfe53e00) at .moc/release-shared/moc_qsslsocket.cpp:77
#30 0xb6eeebb1 in QMetaObject::activate (sender=0xae5ee20, m=0xb7035a58, local_signal_index=0, argv=0x0) at kernel/qobject.cpp:3547
#31 0xb6f3f025 in QIODevice::readyRead (this=0xae5ee20) at .moc/release-shared/moc_qiodevice.cpp:105
#32 0xb3b98723 in QAbstractSocketPrivate::canReadNotification (this=0xae5f0a0) at socket/qabstractsocket.cpp:654
#33 0xb3b86599 in QAbstractSocketEngine::readNotification (this=0xa8dd2c8) at socket/qabstractsocketengine.cpp:168
#34 0xb3ba132b in event (this=0xad83a20, e=<optimized out>) at socket/qnativesocketengine.cpp:1151
#35 QReadNotifier::event (this=0xad83a20, e=0xbfe54294) at socket/qnativesocketengine.cpp:1148
#36 0xb63c2df4 in notify_helper (e=0xbfe54294, receiver=0xad83a20, this=0x9bc2978) at kernel/qapplication.cpp:4556
#37 QApplicationPrivate::notify_helper (this=0x9bc2978, receiver=0xad83a20, e=0xbfe54294) at kernel/qapplication.cpp:4528
#38 0xb63c815d in QApplication::notify (this=0xbfe54294, receiver=0xad83a20, e=0xbfe54294) at kernel/qapplication.cpp:4285
#39 0xb74f8e61 in KApplication::notify (this=0xbfe54574, receiver=0xad83a20, event=0xbfe54294) at ../../kdeui/kernel/kapplication.cpp:311
#40 0xb6ed7e0e in QCoreApplication::notifyInternal (this=0xbfe54574, receiver=0xad83a20, event=0xbfe54294) at kernel/qcoreapplication.cpp:915
#41 0xb6f0a448 in sendEvent (event=0xbfe54294, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#42 socketNotifierSourceDispatch (source=0x9bc7f00) at kernel/qeventdispatcher_glib.cpp:110
#43 0xb38e0d86 in g_main_context_dispatch () from /lib/i386-linux-gnu/libglib-2.0.so.0
#44 0xb38e1125 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#45 0xb38e1201 in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#46 0xb6f0ad87 in QEventDispatcherGlib::processEvents (this=0x9b96f10, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#47 0xb647ba1a in QGuiEventDispatcherGlib::processEvents (this=0x9b96f10, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#48 0xb6ed66ad in QEventLoop::processEvents (this=0xbfe544d4, flags=...) at kernel/qeventloop.cpp:149
#49 0xb6ed6949 in QEventLoop::exec (this=0xbfe544d4, flags=...) at kernel/qeventloop.cpp:204
#50 0xb6edc34a in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1187
#51 0xb63c09c4 in QApplication::exec () at kernel/qapplication.cpp:3817
#52 0x0804ac51 in main (argc=<error reading variable: Cannot access memory at address 0x0>, argv=<error reading variable: Cannot access memory at address 0x4>) at ../../../kontact/src/main.cpp:219

Reported using DrKonqi
Comment 1 Laurent Montel 2013-03-28 08:08:01 UTC
Git commit c6568651b452588534b97b4ccca126c2492b8d01 by Montel Laurent.
Committed on 28/03/2013 at 09:07.
Pushed by mlaurent into branch 'master'.

Fix Bug 317443 - KMail crashed by clicking Sieve scripts

FIXED-IN: 4.11

M  +14   -13   libksieve/ksieveui/managesievescriptsdialog.cpp
M  +4    -3    libksieve/ksieveui/managesievescriptsdialog.h

http://commits.kde.org/kdepim/c6568651b452588534b97b4ccca126c2492b8d01