Fix Bug 317443 - KMail crashed by clicking Sieve scripts

FIXED-IN: 4.11
BUG: 317443